Added info on multi level indexing

--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -47,7 +47,11 @@ Don't forget to have the dataset saved in the same directory as where your pytho
 
 **Ways to Resolve Issues**
 
-**Multi Indexing**
+**Multi-Level Indexing**
+Basically a glorified way to access elements after a group by occurs. Except it is not actually a group by that makes a pandas data frame have multiple index levels. You choose a column that you want to set the index to (so the column has to have more of a unique value per row), and then you are able to slice your data frame based on two different indeces. 
+
+Refer to data camp's explanation
+https://www.datacamp.com/community/tutorials/pandas-multi-index
 
 ** Date and Time **
 
