--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -41,17 +41,19 @@ Don't forget to have the dataset saved in the same directory as where your pytho
 4. At this point, you no longer need to explicitly reference the alias pd since we have already loaded the data using pandas. The data is now a pandas object which means we can now use the different features of pandas.
 
 
-**What are the benefits of using Pandas?**
-
-**Issues with Pandas**
-
-**Ways to Resolve Issues**
-
 **Multi-Level Indexing**
-Basically a glorified way to access elements after a group by occurs. Except it is not actually a group by that makes a pandas data frame have multiple index levels. You choose a column that you want to set the index to (so the column has to have more of a unique value per row), and then you are able to slice your data frame based on two different indeces. 
+
+Basically a glorified way to access elements after a group by occurs. 
+
+<img width="954" alt="Screen Shot 2021-09-23 at 8 23 27 AM" src="https://user-images.githubusercontent.com/77635875/134525477-b8fc8685-9d45-4f83-8d50-7bd76a2e3050.png">
+
+Except it is not actually a group by that makes a pandas data frame have multiple index levels. You choose a column that you want to set the index to (so the column has to have more of a unique value per row), and then you are able to slice your data frame based on two different indeces. 
+
+<img width="925" alt="Screen Shot 2021-09-23 at 8 23 00 AM" src="https://user-images.githubusercontent.com/77635875/134525529-e812f6d2-0b48-41a3-b651-57f4ab387c55.png">
 
 Refer to data camp's explanation
 https://www.datacamp.com/community/tutorials/pandas-multi-index
+
 
 ** Date and Time **
 
