--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -17,7 +17,7 @@ Pandas was created in order to get "better performance" than excel around 2007 b
 If you would like to learn more about the history of pandas, refer to this website
 https://en.wikipedia.org/wiki/Pandas_(software)
 
-**How to Install Pandas?**
+# How to Install Pandas?
 1. Open up a new terminal window
 <img width="566" alt="Screen Shot 2021-09-22 at 11 24 43 AM" src="https://user-images.githubusercontent.com/77635875/134392310-694ce656-3fea-4312-9180-e8a6fffeae7f.png">
 2. Type in and run "pip install pandas"
@@ -26,7 +26,7 @@ https://en.wikipedia.org/wiki/Pandas_(software)
 If you want to install pandas through the anaconda distribution, refer to this website
 https://docs.anaconda.com/anaconda/navigator/tutorials/pandas/
 
-**How to Use Pandas?**
+# Creating a pandas dataframe
 1. Now you can import pandas in your text editor of choice in python
 2. Import pandas in the first code chunk and save it as the common alias of pd
 <img width="910" alt="Screen Shot 2021-09-22 at 11 41 13 AM" src="https://user-images.githubusercontent.com/77635875/134394415-d04f7eae-51d4-4459-9785-b55b8ed9ba17.png">
@@ -41,7 +41,7 @@ Don't forget to have the dataset saved in the same directory as where your pytho
 4. At this point, you no longer need to explicitly reference the alias pd since we have already loaded the data using pandas. The data is now a pandas object which means we can now use the different features of pandas.
 
 
-**Multi-Level Indexing**
+# Multi-Level Indexing
 
 Basically a glorified way to access elements after a group by occurs. 
 
