Switched the dataset I was working with

--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -30,28 +30,32 @@ https://docs.anaconda.com/anaconda/navigator/tutorials/pandas/
 1. Now you can import pandas in your text editor of choice in python
 2. Import pandas in the first code chunk and save it as the common alias of pd
 <img width="910" alt="Screen Shot 2021-09-22 at 11 41 13 AM" src="https://user-images.githubusercontent.com/77635875/134394415-d04f7eae-51d4-4459-9785-b55b8ed9ba17.png">
-If you want to follow along, you can use your own dataset or if you would like to use the same tennis dataset, you can download it here:
-https://www.kaggle.com/gmadevs/atp-matches-dataset/version/2?select=atp_matches_2017.csv
+
+3. Read in the data using the pd.read_csv() function
+<img width="409" alt="RdgData_Head" src="https://user-images.githubusercontent.com/77635875/134533095-d6b0638e-af2b-4772-8f32-51b6e4806a11.png">
+
 
 Don't forget to have the dataset saved in the same directory as where your python file is located at.
-<img width="495" alt="Screen Shot 2021-09-22 at 11 49 25 AM" src="https://user-images.githubusercontent.com/77635875/134395542-862d4040-d32e-4bc1-a601-170755fa1578.png">
 
-3. The type of the df object is now a pandas DataFrame
+<img width="423" alt="Screen Shot 2021-09-23 at 9 03 14 AM" src="https://user-images.githubusercontent.com/77635875/134532754-e6057799-be1d-4c4b-8533-c7b71026c379.png">
+
+4. The type of the df object is now a pandas DataFrame
 <img width="952" alt="Screen Shot 2021-09-22 at 11 43 44 AM" src="https://user-images.githubusercontent.com/77635875/134394640-987a3d71-9d4e-45a5-999b-1665988a7df9.png">
-4. At this point, you no longer need to explicitly reference the alias pd since we have already loaded the data using pandas. The data is now a pandas object which means we can now use the different features of pandas.
+
+5. At this point, you no longer need to explicitly reference the alias pd since we have already loaded the data using pandas. The data is now a pandas object which means we can now use the different features of pandas.
 
 
 # Multi-Level Indexing
 
 Basically a glorified way to access elements after a group by occurs. 
 
-<img width="954" alt="Screen Shot 2021-09-23 at 8 23 27 AM" src="https://user-images.githubusercontent.com/77635875/134525477-b8fc8685-9d45-4f83-8d50-7bd76a2e3050.png">
+
 
 Except it is not actually a group by that makes a pandas data frame have multiple index levels. You choose a column that you want to set the index to (so the column has to have more of a unique value per row), and then you are able to slice your data frame based on two different indeces. 
 
-<img width="925" alt="Screen Shot 2021-09-23 at 8 23 00 AM" src="https://user-images.githubusercontent.com/77635875/134525529-e812f6d2-0b48-41a3-b651-57f4ab387c55.png">
 
-Refer to data camp's explanation
+
+If you would like another example of multi indeces, refer to data camp's explanation
 https://www.datacamp.com/community/tutorials/pandas-multi-index
 
 
