Changed pictures to new data

--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -29,7 +29,8 @@ https://docs.anaconda.com/anaconda/navigator/tutorials/pandas/
 # Creating a pandas dataframe
 1. Now you can import pandas in your text editor of choice in python
 2. Import pandas in the first code chunk and save it as the common alias of pd
-<img width="910" alt="Screen Shot 2021-09-22 at 11 41 13 AM" src="https://user-images.githubusercontent.com/77635875/134394415-d04f7eae-51d4-4459-9785-b55b8ed9ba17.png">
+
+<img width="435" alt="import_pandas" src="https://user-images.githubusercontent.com/77635875/134533744-11e06e62-3d90-442f-8459-571cb9e36e7b.png">
 
 3. Read in the data using the pd.read_csv() function
 <img width="409" alt="RdgData_Head" src="https://user-images.githubusercontent.com/77635875/134533095-d6b0638e-af2b-4772-8f32-51b6e4806a11.png">
