Made a lot of changes

--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -27,26 +27,32 @@ If you want to install pandas through the anaconda distribution, refer to this w
 https://docs.anaconda.com/anaconda/navigator/tutorials/pandas/
 
 # Creating a pandas dataframe
-1. Now you can import pandas in your text editor of choice in python
-2. Import pandas in the first code chunk and save it as the common alias of pd
+1. Now you can import pandas in your text editor of choice in python and save it as the common alias of pd
+2. Read in the data using the pd.read_csv() function
 
-<img width="435" alt="import_pandas" src="https://user-images.githubusercontent.com/77635875/134533744-11e06e62-3d90-442f-8459-571cb9e36e7b.png">
-
-3. Read in the data using the pd.read_csv() function
-<img width="409" alt="RdgData_Head" src="https://user-images.githubusercontent.com/77635875/134533095-d6b0638e-af2b-4772-8f32-51b6e4806a11.png">
-
+<img width="549" alt="Screen Shot 2021-09-23 at 9 22 03 AM" src="https://user-images.githubusercontent.com/77635875/134536159-90eef18b-ab36-41e1-92ad-80aaaccc9e61.png">
 
 Don't forget to have the dataset saved in the same directory as where your python file is located at.
 
-<img width="423" alt="Screen Shot 2021-09-23 at 9 03 14 AM" src="https://user-images.githubusercontent.com/77635875/134532754-e6057799-be1d-4c4b-8533-c7b71026c379.png">
+<img width="446" alt="Screen Shot 2021-09-23 at 9 20 50 AM" src="https://user-images.githubusercontent.com/77635875/134535966-1123e000-b3f7-475c-84fe-4675e715d998.png">
 
-4. The type of the df object is now a pandas DataFrame
+
+3. The type of the df object is now a pandas DataFrame
 <img width="952" alt="Screen Shot 2021-09-22 at 11 43 44 AM" src="https://user-images.githubusercontent.com/77635875/134394640-987a3d71-9d4e-45a5-999b-1665988a7df9.png">
 
-5. At this point, you no longer need to explicitly reference the alias pd since we have already loaded the data using pandas. The data is now a pandas object which means we can now use the different features of pandas.
+4. At this point, you no longer need to explicitly reference the alias pd since we have already loaded the data using pandas. The data is now a pandas object which means we can now use the different features of pandas.
+
+5. You can use the set_index() function on a column in the dataset that is a unique value for the dataset. From there you can use the .loc with the square brackets in order to subset the dataset based on one of the new index values.
+<img width="653" alt="Screen Shot 2021-09-23 at 9 23 20 AM" src="https://user-images.githubusercontent.com/77635875/134536596-72c4b965-c99c-4849-8378-a93ad6d5d4a2.png">
 
 
 # Multi-Level Indexing
+
+In order to understand multi-level indexing, you would first need to understand indexing at a single level. 
+
+Once you are trying to index based on multiple levels, then the two column values that you want to become your indeces should give you a unique value when used together.
+
+<img width="949" alt="set_index" src="https://user-images.githubusercontent.com/77635875/134534769-6517f734-e2e2-49bc-b450-980c9dd38d08.png">
 
 Basically a glorified way to access elements after a group by occurs. 
 
