--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -59,27 +59,30 @@ In order to understand multi-level indexing, you would first need to understand 
 
 <img width="281" alt="Screen Shot 2021-09-24 at 9 28 53 AM" src="https://user-images.githubusercontent.com/77635875/134701226-1f42ed15-a640-437e-b595-377626f2f3b9.png">
 
-4. The order does matter when trying to subset the dataframe using the multiple indeces. If you have the order wrong you will get a KeyError saying that it doesn't recognize the index that you are trying to use.
+## TIP ##
+
+The order does matter when trying to subset the dataframe using the multiple indeces. If you have the order wrong you will get a KeyError saying that it doesn't recognize the index that you are trying to use.
 
 <img width="568" alt="Screen Shot 2021-09-24 at 9 30 15 AM" src="https://user-images.githubusercontent.com/77635875/134701532-805fc3ce-f280-4bb1-8635-233023563294.png">
 
-5. Since I created my multiple indeces based on the Student_ID first and then the class, I need to index in that order. And when I index in the correct order, I get the letter grade of A back.
+4. Since I created my multiple indeces based on the Student_ID first and then the class, I need to index in that order. And when I index in the correct order, I get the letter grade of A back.
 
 <img width="334" alt="Screen Shot 2021-09-24 at 9 31 51 AM" src="https://user-images.githubusercontent.com/77635875/134701756-7835997f-1e27-475c-8255-6d8398f77cdc.png">
 
-6. If you are needing to add another dataset vertically onto the original dataset (meaning that the columns will match up with the previous information), then you can use the pandas concat function.
+5. If you are needing to add another dataset vertically onto the original dataset (meaning that the columns will match up with the previous information), then you can use the pandas concat function.
 
 <img width="484" alt="Screen Shot 2021-09-24 at 9 55 20 AM" src="https://user-images.githubusercontent.com/77635875/134705063-6cffee9b-1683-435b-aae8-043995c2cc7a.png">
 
-This shows the new student information added to the previous dataset. 
+6. This shows the new student information added to the previous dataset. 
 
 <img width="190" alt="Screen Shot 2021-09-24 at 9 56 11 AM" src="https://user-images.githubusercontent.com/77635875/134705254-1dd407c5-0cf5-4103-b2a3-6823da625d21.png">
 
+## TIP ##
 Make sure that before you concatenate the two files together, that you re-read in the files that you had set multiple indeces for. The reason behind re-reading the files in is because it will still concatenate the two files, but it won't put the data where you were hoping it would go. The multiple indeces that were created for that dataset will go into the index column and then fill the index columns with NaN values.
 
 <img width="503" alt="Screen Shot 2021-09-24 at 1 33 26 PM" src="https://user-images.githubusercontent.com/77635875/134730441-05861eb5-635f-4315-b611-c32880442e33.png">
 
-Once you read in both of the files again and concatenate them together you can then use the set_index() and the sort_index() functions in order to have the data (and in this case being new students) be sorted properly. 
+7. Once you read in both of the files again and concatenate them together you can then use the set_index() and the sort_index() functions in order to have the data (and in this case being new students) be sorted properly. 
 
 <img width="163" alt="Screen Shot 2021-09-24 at 1 43 55 PM" src="https://user-images.githubusercontent.com/77635875/134731490-f616c371-300f-499e-aa9c-1c665aa603ba.png">
 
