Added the merge section

--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -7,7 +7,8 @@ description: Tutorial for the pandas package and how to do multi level indexing.
 tags:
 - Beginner Pandas
 - Multi Level Indexing
-- tag 3
+- Concatenate
+- Merge
 ---
 
 # Why was Pandas Created?
@@ -80,11 +81,13 @@ The order does matter when trying to subset the dataframe using the multiple ind
 
 <img width="334" alt="Screen Shot 2021-09-24 at 9 31 51 AM" src="https://user-images.githubusercontent.com/77635875/134701756-7835997f-1e27-475c-8255-6d8398f77cdc.png">
 
-5. If you are needing to add another dataset vertically onto the original dataset (meaning that the columns will match up with the previous information), then you can use the pandas concat function.
+# Concatenating Files Vertically
+
+1. If you are needing to add another dataset vertically onto the original dataset (meaning that the columns will match up with the previous information), then you can use the pandas concat function.
 
 <img width="484" alt="Screen Shot 2021-09-24 at 9 55 20 AM" src="https://user-images.githubusercontent.com/77635875/134705063-6cffee9b-1683-435b-aae8-043995c2cc7a.png">
 
-6. This shows the new student information added to the previous dataset. 
+2. This shows the new student information added to the previous dataset. 
 
 <img width="190" alt="Screen Shot 2021-09-24 at 9 56 11 AM" src="https://user-images.githubusercontent.com/77635875/134705254-1dd407c5-0cf5-4103-b2a3-6823da625d21.png">
 
@@ -93,18 +96,38 @@ Make sure that before you concatenate the two files together, that you re-read i
 
 <img width="503" alt="Screen Shot 2021-09-24 at 1 33 26 PM" src="https://user-images.githubusercontent.com/77635875/134730441-05861eb5-635f-4315-b611-c32880442e33.png">
 
-7. Once you read in both of the files again and concatenate them together you can then use the set_index() and the sort_index() functions in order to have the data (and in this case being new students) be sorted properly. 
+3. Once you read in both of the files again and concatenate them together you can then use the set_index() and the sort_index() functions in order to have the data (and in this case being new students) be sorted properly. 
 
 <img width="163" alt="Screen Shot 2021-09-24 at 1 43 55 PM" src="https://user-images.githubusercontent.com/77635875/134731490-f616c371-300f-499e-aa9c-1c665aa603ba.png">
-
 
 
 If you would like another example of multi indeces, refer to data camp's explanation
 https://www.datacamp.com/community/tutorials/pandas-multi-index
 
 
-** Date and Time **
+# Pandas Version of SQL's Join is "Merge"
 
-** One or two functionalities that we haven't covered in class **
+1. Here is a data set where there is a column in common to our previous dataset. This is an example where we would want to use pandas merge function which would allow us to combine the two data frames.
+
+
+<img width="453" alt="Screen Shot 2021-09-24 at 2 05 05 PM" src="https://user-images.githubusercontent.com/77635875/134733639-f9443aa5-8f5c-417b-83bf-1f76df847239.png">
+
+2. Give the merge function the two names of the data frames as the left and right arguments, and specify the column in common for the "on" argument.
+
+
+<img width="342" alt="Screen Shot 2021-09-24 at 2 06 23 PM" src="https://user-images.githubusercontent.com/77635875/134733773-8dd0e91f-6cb8-4fcc-b53c-bebe37752a2c.png">
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
