Added the group by section

--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -81,6 +81,25 @@ The order does matter when trying to subset the dataframe using the multiple ind
 
 <img width="334" alt="Screen Shot 2021-09-24 at 9 31 51 AM" src="https://user-images.githubusercontent.com/77635875/134701756-7835997f-1e27-475c-8255-6d8398f77cdc.png">
 
+# Pandas Groupby
+
+You may have noticed if you have done SQL coding that multi level indexing is fairly similar to the groupby function. Here is an example of the groupby function so that you may be able to compare the outputs to each other.
+
+1. Read in the numeric grade data set and then use .groupby() with the columns you are wanting to group in square brackets. Then you can include an aggregate function at the end, with this case being mean().
+
+<img width="474" alt="Screen Shot 2021-09-24 at 2 55 00 PM" src="https://user-images.githubusercontent.com/77635875/134738758-24febc3c-6432-46f9-935b-eb43b574cd2d.png">
+
+## TIP ##
+
+If you do not include an aggregate function like sum() or mean() at the end, it will simply output that you have a pandas groupby object that was created.
+
+<img width="570" alt="Screen Shot 2021-09-24 at 2 53 26 PM" src="https://user-images.githubusercontent.com/77635875/134738584-4dee46a8-aa03-4be3-8d9f-98dd58ceb994.png">
+
+2. From Step 1 you can see that it included the average of terms 1 and 2 for the term column which is meaningless for this example. You can then select which columns you would like to keep for the output right after the parentheses for the group by and before the aggregate function of choice.
+
+<img width="669" alt="Screen Shot 2021-09-24 at 2 57 40 PM" src="https://user-images.githubusercontent.com/77635875/134738958-38a7bcff-a8f2-4d34-9716-d61de1c42809.png">
+
+
 # Concatenating Files Vertically
 
 1. If you are needing to add another dataset vertically onto the original dataset (meaning that the columns will match up with the previous information), then you can use the pandas concat function.
@@ -109,23 +128,11 @@ https://www.datacamp.com/community/tutorials/pandas-multi-index
 
 1. Here is a data set where there is a column in common to our previous dataset. This is an example where we would want to use pandas merge function which would allow us to combine the two data frames.
 
-
 <img width="453" alt="Screen Shot 2021-09-24 at 2 05 05 PM" src="https://user-images.githubusercontent.com/77635875/134733639-f9443aa5-8f5c-417b-83bf-1f76df847239.png">
 
 2. Give the merge function the two names of the data frames as the left and right arguments, and specify the column in common for the "on" argument.
 
-
 <img width="342" alt="Screen Shot 2021-09-24 at 2 06 23 PM" src="https://user-images.githubusercontent.com/77635875/134733773-8dd0e91f-6cb8-4fcc-b53c-bebe37752a2c.png">
-
-
-
-
-
-
-
-
-
-
 
 
 
