--- a/_posts/2021-09-29-Pandas.md
+++ b/_posts/2021-09-29-Pandas.md
@@ -1,29 +1,36 @@
 ---
-title: 2021-09-29-Pandas-Blog-Post
+title: Wrangling the Pandas (DataFrame)
 layout: post
 author: skimball_22
 post-image: "https://user-images.githubusercontent.com/77635875/133832882-606db727-44cd-4202-9b30-5a44f69019be.jpg"
-description: Tutorial for the pandas package and how to do multi level indexing.
+description: Tutorial for the pandas package and how to do multi-level indexing, concatenate, merge, and group data.
 tags:
 - Beginner Pandas
 - Multi Level Indexing
 - Concatenate
 - Merge
+- Group by
 ---
 
-# Why was Pandas Created?
+# Introduction - Why was Pandas Created?
 
 Pandas was created in order to get "better performance" than excel around 2007 by Wes McKinney. 
 
 If you would like to learn more about the history of pandas, refer to this website:
 https://en.wikipedia.org/wiki/Pandas_(software)
 
+If you are trying to work with large datasets and are having struggles grouping, merging, or finding information in an excel file then this post is for you! It will help you to be able to see examples of how each of these would be used, and even some tips of pitfalls to avoid! Those tips are there to help you save time from hitting errors that I have already had to struggle with.
+
 # How to Install Pandas?
 
 1. Open up a new terminal window
+
+
 <img width="566" alt="Screen Shot 2021-09-22 at 11 24 43 AM" src="https://user-images.githubusercontent.com/77635875/134392310-694ce656-3fea-4312-9180-e8a6fffeae7f.png">
 
 2. Type in and run "pip install pandas"
+
+
 <img width="569" alt="Screen Shot 2021-09-22 at 11 25 15 AM" src="https://user-images.githubusercontent.com/77635875/134392328-0c4a8299-d93b-4d89-bb11-2b9a15f83d17.png">
 
 If you want to install pandas through the anaconda distribution, refer to this website:
@@ -134,7 +141,17 @@ https://www.datacamp.com/community/tutorials/pandas-multi-index
 
 <img width="342" alt="Screen Shot 2021-09-24 at 2 06 23 PM" src="https://user-images.githubusercontent.com/77635875/134733773-8dd0e91f-6cb8-4fcc-b53c-bebe37752a2c.png">
 
+# Conclusion
 
+We have now looked at how to index, multi-level index, group, concatenate, and merge datasets.
+Now you should have a few tools in your toolbelt that will help you to avoid stress and anxiety over working with datasets!
+Hopefully these tools were helpful to you in your pandas dataframe wrangling endeavors!
+
+
+# Challenge
+
+I challenge you to comment on this post including a picture of your either successful or unsuccessful attempt to use one of these Pandas pro tips!
+You can also comment suggestions of other pandas tools that you think would be good to be included in this blog post.
 
 
 
