Add images to 2021-10-11-UsingGit.md

--- a/_posts/2021-10-11-UsingGit.md
+++ b/_posts/2021-10-11-UsingGit.md
@@ -2,7 +2,7 @@
 title: Practical Examples of Using Git and GitHub
 layout: post
 author: bkinard64
-post-image: https://www.google.com/url?sa=i&url=https%3A%2F%2Fdev.to%2Fchaoocharles%2Flearn-git-and-github-common-git-commands-4cno&psig=AOvVaw1FRAr7IcCyz5XSbbVPg3i_&ust=1632613419917000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOj3m4zlmPMCFQAAAAAdAAAAABAD
+post-image: ![blur](assets/images/blogimages/figs-10-11/cover-photo.jpg)
 description: Provide practical examples of using Git and GitHub as a means of demonstrating the benefits these tools provide
 tags:
 - Git
@@ -51,6 +51,10 @@ changes to the remote repository. Once my code for that project was officially p
 I would submit a pull request and merge that project's branch into main. The main branch would then
 be up to date and ready to be branched off from at the start of the next project.
 
+![art](assets/images/blogimages/figs-10-11/personal-repo.png)
+
+![art](assets/images/blogimages/figs-10-11/personal-log.png)
+
 Using Git and GitHub to track my progress on these projects really helped me become familiar with
 common commands and development processes. The log of commits was also really advantageous to have.
 Occassionally, I would make a change to the code, only to realize a day or two later that I
@@ -84,6 +88,10 @@ in R. We also had a branch for documentation purposes. On each of these branches
 and push changes we made so the others could pull those changes to their own devices. When everything we hoped to
 accomplish on a given branch was complete, we would submit a pull request. After each member of our team had reviewed
 the changes on this branch and approved them, the branch would be merged into main and then deleted.
+
+![art](assets/images/blogimages/figs-10-11/collab-repo.png)
+
+![art](assets/images/blogimages/figs-10-11/collab-log.png)
 
 The process described above is typical of many software engineering and/or data science projects, and hopefully it
 illustrates why these version control tools are so necessary.
