--- a/_posts/2021-10-11-UsingGit.md
+++ b/_posts/2021-10-11-UsingGit.md
@@ -51,9 +51,9 @@ changes to the remote repository. Once my code for that project was officially p
 I would submit a pull request and merge that project's branch into main. The main branch would then
 be up to date and ready to be branched off from at the start of the next project.
 
-![art](assets/images/blogimages/figs-10-11/personal-repo.png)
+![open](assets/images/blogimages/figs-10-11/personal-repo.png)
 
-![art](assets/images/blogimages/figs-10-11/personal-log.png)
+![open](assets/images/blogimages/figs-10-11/personal-log.png)
 
 Using Git and GitHub to track my progress on these projects really helped me become familiar with
 common commands and development processes. The log of commits was also really advantageous to have.
@@ -89,9 +89,9 @@ and push changes we made so the others could pull those changes to their own dev
 accomplish on a given branch was complete, we would submit a pull request. After each member of our team had reviewed
 the changes on this branch and approved them, the branch would be merged into main and then deleted.
 
-![art](assets/images/blogimages/figs-10-11/collab-repo.png)
+![open](assets/images/blogimages/figs-10-11/collab-repo.png)
 
-![art](assets/images/blogimages/figs-10-11/collab-log.png)
+![open](assets/images/blogimages/figs-10-11/collab-log.png)
 
 The process described above is typical of many software engineering and/or data science projects, and hopefully it
 illustrates why these version control tools are so necessary.
