--- a/_posts/2021-10-11-UsingGit.md
+++ b/_posts/2021-10-11-UsingGit.md
@@ -2,7 +2,7 @@
 title: Practical Examples of Using Git and GitHub
 layout: post
 author: bkinard64
-post-image: ![blur](assets/images/blogimages/figs-10-11/cover-photo.jpg)
+post-image: assets/images/blogimages/figs-10-11/cover-photo.jpg
 description: Provide practical examples of using Git and GitHub as a means of demonstrating the benefits these tools provide
 tags:
 - Git
@@ -49,11 +49,12 @@ the semester, I created a new branch to develop that part of the code on. As I m
 given project, I frequently staged and committed changes to that working branch and pushed those
 changes to the remote repository. Once my code for that project was officially passed off by a TA,
 I would submit a pull request and merge that project's branch into main. The main branch would then
-be up to date and ready to be branched off from at the start of the next project.
+be up to date and ready to be branched off from at the start of the next project (see below the
+repository and commit log).
 
-![open](assets/images/blogimages/figs-10-11/personal-repo.png)
+![CS236 Repo](assets/images/blogimages/figs-10-11/personal-repo.png)
 
-![open](assets/images/blogimages/figs-10-11/personal-log.png)
+![CS236 Log](assets/images/blogimages/figs-10-11/personal-log.png)
 
 Using Git and GitHub to track my progress on these projects really helped me become familiar with
 common commands and development processes. The log of commits was also really advantageous to have.
@@ -71,11 +72,11 @@ In January 2021 I began working with two other students as a research assistant 
 an R package for performing rare-event meta-analysis. In order to efficiently accomplish this task in which
 we often **collaborated asynchronously**, using Git and GitHub was essential.
 
-An R package, as you might imagine, has a lot that goes into it. In addition to developing the source code,
-we also had to include necessary dependencies, create various forms of documentation, and obtain licenses.
-Not only that, but the method that would ultimately be implemented by this package was originally written in
-C, so there was a lot that needed to be done to allow this code to interact with the package. Without a
-version control system, working on a project like this would require all of us to be present in a common
+An R package, as you might imagine, has a lot that goes into it [R Packages](https://r-pkgs.org/). In addition
+to developing the source code, we also had to include necessary dependencies, create various forms of documentation,
+and obtain licenses. Not only that, but the method that would ultimately be implemented by this package was
+originally written in C, so there was a lot that needed to be done to allow this code to interact with the package.
+Without a version control system, working on a project like this would require all of us to be present in a common
 location with a single device to make and save changes on. However, using Git and GitHub allowed us to work
 asynchronously on our own devices at a much more efficient pace.
 
@@ -87,11 +88,12 @@ the C code to C++. We had a branch for writing the R source code and another bra
 in R. We also had a branch for documentation purposes. On each of these branches we would frequently stage, commit,
 and push changes we made so the others could pull those changes to their own devices. When everything we hoped to
 accomplish on a given branch was complete, we would submit a pull request. After each member of our team had reviewed
-the changes on this branch and approved them, the branch would be merged into main and then deleted.
+the changes on this branch and approved them, the branch would be merged into main and then deleted (see below the
+repository and commit log).
 
-![open](assets/images/blogimages/figs-10-11/collab-repo.png)
+![Rpackage Repo](assets/images/blogimages/figs-10-11/collab-repo.png)
 
-![open](assets/images/blogimages/figs-10-11/collab-log.png)
+![Rpackage Log](assets/images/blogimages/figs-10-11/collab-log.png)
 
 The process described above is typical of many software engineering and/or data science projects, and hopefully it
 illustrates why these version control tools are so necessary.
