Edit link in 10-11

--- a/_posts/2021-10-11-UsingGit.md
+++ b/_posts/2021-10-11-UsingGit.md
@@ -72,7 +72,7 @@ In January 2021 I began working with two other students as a research assistant 
 an R package for performing rare-event meta-analysis. In order to efficiently accomplish this task in which
 we often **collaborated asynchronously**, using Git and GitHub was essential.
 
-An R package, as you might imagine, has a lot that goes into it [R Packages](https://r-pkgs.org/). In addition
+An R package, as you might imagine, has a lot that goes into it ([R Packages](https://r-pkgs.org/)). In addition
 to developing the source code, we also had to include necessary dependencies, create various forms of documentation,
 and obtain licenses. Not only that, but the method that would ultimately be implemented by this package was
 originally written in C, so there was a lot that needed to be done to allow this code to interact with the package.
