Fix header for tidy data post

--- a/_posts/2021-10-04-tidy-data.md
+++ b/_posts/2021-10-04-tidy-data.md
@@ -1,15 +1,16 @@
 ---
-Title: Tidy Your Data, Tidy your life
-Layout: post
-Author: mmesservy
-Post-image /assets/images/blogimages/figs-10-04/main.png
-Description: How to clean up your data and why you should care.
-Tags: 
+title: Tidy Your Data, Tidy your life
+layout: post
+author: mmesservy
+post-image: /assets/images/blogimages/figs-10-04/main.png
+description: How to clean up your data and why you should care.
+tags: 
 - Tidyverse
 - Clean Data
 - Tidy Data
 - Messy Data
 ---
+
 
 ## “Tidy datasets are all alike, but every messy dataset is messy in its own way.” – Hadley Wickham
 
