Update images to show correctly.

--- a/_posts/2021-11-12-vscode.md
+++ b/_posts/2021-11-12-vscode.md
@@ -15,7 +15,7 @@ tags:
 
 In today's world, coding has become an essential part of us. Apple's CEO, Tim Cook, elaborated in the recent Silicon Slope Summit, "Teaching someone to code teaches them critical thinking skills ... coding teaches you the art of the possible ... you need to learn how to code even if you're not going to be a coder." Everyone needs to learn how to code! 
 
-![screenshot](/assets/images/blogimages/figs-11-12/img1.png)
+![screenshot](/assets/images/blogimages/figs-11-12/img1.jpg)
 
 As many would agree, the first step to start coding is to choose a language to code in. Once you decide a language to learn, you then get to choose an IDE, the Integrated Development Environment. Having an appropriate IDE can enhance your coding experience and help you become a better coder, in general. Examples of some of the famous IDEs are Xcode, Eclipse, Atom, Sublime Text, Komodo, PyCharm, and Microsoft Visual Studio. Each IDEs are usaully known for its effectiveness on a certain language. For example, Eclipse and Komodo is known for its use with Java, and PyCharm for Python. There are also IDEs that are used for general coding, with extensions to help with specific languages. These include Xcode, Atom, Sublime Text, and Microsoft Visual Studio. 
 In case of Microsoft Visual Studio, Microsoft has divided its IDE into two, Visual Studio and Visual Studio Code, to maximize its individual usage. Visual Studio is a "full-featured" and "convenient" development environment mainly for C# and ASP .NET, while Visual Studio Code is a cross-platform (Windows, MacOS, Linux) editor that utilizes extensions/plugins to work with many languages. 
