fix minor errors.

--- a/_posts/2021-11-12-vscode.md
+++ b/_posts/2021-11-12-vscode.md
@@ -67,7 +67,7 @@ pip3 install numpy
 pip3 install pandas
 
 pip3 install sklearn
-// . . .
+. . .
 ```
 
 Sklearn requires additional installs. You may follow the prompt given once you run sklearn-related components.
@@ -79,8 +79,9 @@ A good feature of VS Code is its effectiveness of source control through GitHub.
 
 ![screenshot](/assets/images/blogimages/figs-11-12/img7.png)
 ![screenshot](/assets/images/blogimages/figs-11-12/img8.png)
+![screenshot](/assets/images/blogimages/figs-11-12/img9.png)
 
-As you can see, the left pane provides a source control option, where you can type in your commit message and push when needed. Also, the bottom pane indicates whether the repository you are currently working on has updates. You can also easily set up branches and work as a team with VS Code. 
+As you can see, the left pane provides a source control option, where you can type in your commit message and pull/push when needed. Also, the bottom pane indicates whether the repository you are currently working on has updates. You can also easily set up branches and work as a team with VS Code. 
 
 Sometimes, VS Code has many repositories and doesn't save the last repositories you have worked on, not showing all of them. Then, you could go to the directory on your local machine in the terminal to re-instantiate the repository.
 
