Fix student mistakes

--- a/_posts/2021-10-28-plotyly.md
+++ b/_posts/2021-10-28-plotyly.md
@@ -1,7 +1,7 @@
 ---
 title: How to Make Graphics Stand Out Using Plotly
 layout: post
-author: bethanybassett
+author: bethday
 post-image: /assets/images/blogimages/figs-10-28/plotly-title-plots.png
 description: Different ways to visualize data using plotly
 tags:
@@ -12,7 +12,7 @@ tags:
 
 Many disciplines, including statistics, finance, and business, use data visualization to convey information quickly and efficiently to their audience. As such, there are many libraries and packages that have been created to help people make all sorts of plots and graphs. Plotly is a data visualization library that you can use to create beautiful and interactive graphs and is supported in different programing languages such as Python, R, and Julia. It has become a popular library for data visualization because it is easy to implement code, makes visually appealing graphics, and the plots are user interactive. These plots are especially useful during exploratory data analysis, where you can create a graphic and then click around and look at individual points. It is also a great tool to share with your audience, who can interact with the graph themselves.
 
-## Installation 
+## Installation
 
 If you are using Python, plotly many be installed using pip or pip 3:
 
@@ -62,7 +62,7 @@ fig.show()
 
 ![MySQL](/assets/images/blogimages/figs-10-28/Bar.png)
 
-On the graph, you will be able to hover over each point and see the breakdown of species for each sepal width. 
+On the graph, you will be able to hover over each point and see the breakdown of species for each sepal width.
 
 ## Scatterplots
 
@@ -91,13 +91,13 @@ fig.show()
 
 We have gone over a few simple functions in plotly that will create different graphs to look at our dataset. We will be able to interact with the plot ourselves, but what if you want to share your plotly graphic with others?
 
-You can do this pretty easily if you have a plotly account. If you don't already have one, make an account with plotly at plot.ly. Then you can install chart_studios with the code below. 
+You can do this pretty easily if you have a plotly account. If you don't already have one, make an account with plotly at plot.ly. Then you can install chart_studios with the code below.
 
 ```python
 pip install chart_studio
 ```
 
-Then, using the username and api password that you get with your plotly account, run the following code, where fig is the name of the figure you made, and filename is the name you want to give your plot. 
+Then, using the username and api password that you get with your plotly account, run the following code, where fig is the name of the figure you made, and filename is the name you want to give your plot.
 
 
 ```python
@@ -110,7 +110,7 @@ import chart_studio.plotly as py
 py.plot(fig, filename = 'Trendline', auto_open=True)
 ```
 
-After doing this, you should automatically be taken to a link in your account where you can see your interactive graph. 
+After doing this, you should automatically be taken to a link in your account where you can see your interactive graph.
 
 https://chart-studio.plotly.com/~bethanybassett/1/#/
 
