--- a/_posts/2021-11-04-json.md
+++ b/_posts/2021-11-04-json.md
@@ -2,7 +2,7 @@
 title: Let's talk JSON Basics
 layout: post
 author: cal-barker
-post-image: ![open](/assets/blogimages/figs-11-04/post-image.png)
+post-image: /assets/images/blogimages/figs-11-04/post-image.png
 tags:
 - JSON
 - JavaScript
@@ -13,11 +13,11 @@ The first time I heard the term JSON, I thought that it was someone emphasizing 
 
 Well, you have to make mistakes to learn. I now know that JSON actually means: JavaScript Object Notation...
 
-JSON is a format for storing and transporting data, created to 
-be more readable for humans, as opposed to machine language or more complicated ways of data transport. Often JSON is referenced as being self-describing, and therefore easy to read. While inital experience with JSON might make you feel otherwise, experience and comparison to other methods quickly reveals JSON is quite nice. JSON itself is a more recent asset, credited to creators Douglas Crockford and Chip Morningstar in 2001. As the name denotes, JSON is derived from Javascript. However, luckily for all, JSON itself is language-independent, meaning that all programming languages can be adapted to parse JSON. 
+JSON is a format for storing and transporting data, created to
+be more readable for humans, as opposed to machine language or more complicated ways of data transport. Often JSON is referenced as being self-describing, and therefore easy to read. While inital experience with JSON might make you feel otherwise, experience and comparison to other methods quickly reveals JSON is quite nice. JSON itself is a more recent asset, credited to creators Douglas Crockford and Chip Morningstar in 2001. As the name denotes, JSON is derived from Javascript. However, luckily for all, JSON itself is language-independent, meaning that all programming languages can be adapted to parse JSON.
 
 JSON contains data composed of attribute-value pairs and arrays,
-somewhat comparable to a Python dictionary. A key value is associated with an array of data, usually obtained by indexing. 
+somewhat comparable to a Python dictionary. A key value is associated with an array of data, usually obtained by indexing.
 JSON is recognizable as each data item is contained in curly braces. Inside the curly braces, a key value is followed by a colon,
 with the values typically stored in brackets. JSON does not support comments, so any comments below exist for instruction purposes only. Also, some values have been arranged in differing ways to show how differing formats and spacing appears.
 Here is an example to show JSON in action:
@@ -34,7 +34,7 @@ If you wanted to have more than one key based array, you would simply put a comm
 	"stat 426",
 	"is an",
 	"amazing class"],     <-comma here
- "second_array": 
+ "second_array":
 	 [0, 1, 2]
 }
 
@@ -58,7 +58,7 @@ Inside the *inside_array*, we have key-value pairs.
 
 Hopefully that gives a general idea behind the structure and potential that JSON holds. Let's jump over to see how you would access the values inside. Actually obtaining the JSON is dependent on how it is stored and which language or method used to retrieve. For brevity's sake we will focus on the general idea of obtaining values in the Javascript language. This idea translates nicely into other programming languages.
 
-Looking at the last example, let's call the whole item contained in the first pair of braces *Data*. 
+Looking at the last example, let's call the whole item contained in the first pair of braces *Data*.
 *Data* is an object containing a singular *outside_array*, and to get inside we would index *Data*.
 
 To access values inside Data, we would use dot notation or bracket notation.
@@ -87,4 +87,3 @@ Python JSON library
 
 
 Thanks for reading!
-
